# aioalice

./: README-PyPI.md  README-en.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_to_pypi.yml
aioalice/dispatcher/: __init__.py  webhook.py
aioalice/types/: __init__.py  image.py
aioalice/utils/: __init__.py  json.py
